--- a/index.html
+++ b/index.html
@@ -87,5 +87,11 @@
         allowfullscreen
       ></iframe>
     </section>
+    <footer>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
+        pariatur, obcaecati quae sunt esse maxime possimus
+      </p>
+    </footer>
   </body>
 </html>
