--- a/header.html
+++ b/header.html
@@ -1,6 +1,10 @@
 <ul>
   <li><a href="index.html">Forside</a></li>
   <li><a href="Aktiviteter.html">Aktiviteter</a></li>
-  <li>Om os</li>
-  <li>Kontakt</li>
+  <li><a href="camp.html">camps</a></li>
+  <li><a href="fritidsklub.html">Fritidsklub</a></li>
+  <li><a href="uddannelse.html">uddannelse af lærer</a></li>
+  <li><a href="internationalt.html">internationalt arbejde</a></li>
+  <li><a href="om.html">Om os</a></li>
+  <li><a href="kontakt.html">Kontakt</a></li>
 </ul>
