--- a/Aktiviteter.html
+++ b/Aktiviteter.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <div id="hovedmenu"></div>
+    <div class="hovedmenu"></div>
     <section class="splash">
       <img src="serveimage.png" />
     </section>
@@ -42,6 +42,23 @@
           pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
           provident quia aperiam eligendi totam saepe sequi quas fugit rerum at.
         </p>
+      </div>
+    </section>
+
+    <section id="icons">
+      <div id="gridcon">
+        <div class="griditem">
+          <img src="icon.png" /> <button>læs mere her</button>
+        </div>
+        <div class="griditem">
+          <img src="icon.png" /><button>læs mere her</button>
+        </div>
+        <div class="griditem">
+          <img src="icon.png" /><button>læs mere her</button>
+        </div>
+        <div class="griditem">
+          <img src="icon.png" /><button>læs mere her</button>
+        </div>
       </div>
     </section>
     <footer></footer>
