--- a/fritidsklub.html
+++ b/fritidsklub.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <div id="hovedmenu"></div>
+    <div class="hovedmenu"></div>
     <section class="splash">
       <img src="serveimage.png" />
     </section>
