undersider html opsætning

--- a/Aktiviteter.html
+++ b/Aktiviteter.html
@@ -23,9 +23,10 @@
             provident quia aperiam eligendi totam saepe sequi quas fugit rerum
             at.
           </p>
+          <button>læs mere her</button>
         </div>
         <div class="griditem">
-          <img src="icon.png" /> <button>læs mere her</button>
+          <img src="icon.png" />
         </div>
       </div>
     </section>
@@ -42,6 +43,7 @@
           pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
           provident quia aperiam eligendi totam saepe sequi quas fugit rerum at.
         </p>
+        <button>læs mere her</button>
       </div>
     </section>
 
