--- a/camp.html
+++ b/camp.html
@@ -13,7 +13,57 @@
     <section class="splash">
       <img src="serveimage.png" />
     </section>
+    <section>
+      <div id="gridcon2">
+        <div class="griditem">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
+            pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
+            provident quia aperiam eligendi totam saepe sequi quas fugit rerum
+            at.
+          </p>
+        </div>
+      </div>
+    </section>
 
+    <section>
+      <div id="gridcon3">
+        <div class="griditem">
+          <img src="icon.png" />
+        </div>
+      </div>
+      <div class="griditem">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
+          pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
+          provident quia aperiam eligendi totam saepe sequi quas fugit rerum at.
+        </p>
+      </div>
+    </section>
+    <section class="prisliste">
+      <div id="gridcon3">
+        <div class="griditem">
+          <ul>
+            <li>251kr</li>
+            <li>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
+              esse animi, ex maiores enim tempore quam unde nisi alias dolorem
+              assumenda pariatur natus, quos molestias magni. Non ex ea dolores.
+            </li>
+          </ul>
+        </div>
+        <div class="griditem">
+          <ul>
+            <li>251kr</li>
+            <li>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
+              esse animi, ex maiores enim tempore quam unde nisi alias dolorem
+              assumenda pariatur natus, quos molestias magni. Non ex ea dolores.
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
     <footer></footer>
   </body>
   <script src="main.js"></script>
