--- a/om.html
+++ b/om.html
@@ -14,6 +14,25 @@
       <img src="serveimage.png" />
     </section>
 
+    <section id="icons">
+      <div id="gridcon">
+        <div class="griditem">
+          <img src="icon.png" /> <button>læs mere her</button>
+        </div>
+        <div class="griditem">
+          <img src="icon.png" /><button>læs mere her</button>
+        </div>
+        <div class="griditem">
+          <img src="icon.png" /><button>læs mere her</button>
+        </div>
+        <section>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
+            pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
+            provident quia aperiam eligendi totam saepe sequi quas fugit rerum at.
+          </p>
+        </section>
+    </section>
     <footer></footer>
   </body>
   <script src="main.js"></script>
