dropdown menu virker, ingen styleing

--- a/header.html
+++ b/header.html
@@ -1,8 +1,13 @@
 <a href="index.html">Forside</a>
-<a href="Aktiviteter.html">Aktiviteter</a>
-<a href="camp.html">camps</a>
-<a href="fritidsklub.html">Fritidsklub</a>
-<a href="uddannelse.html">uddannelse af lærer</a>
-<a href="internationalt.html">internationalt arbejde</a>
+<div class="dropd">
+  <a class="dropbtn" href="Aktiviteter.html">Aktiviteter</a>
+
+  <div class="dropdownc">
+    <a href="camp.html">camps</a>
+    <a href="fritidsklub.html">Fritidsklub</a>
+    <a href="uddannelse.html">uddannelse af lærer</a>
+    <a href="internationalt.html">internationalt arbejde</a>
+  </div>
+</div>
 <a href="om.html">Om os</a>
 <a href="kontakt.html">Kontakt</a>
