aktiviteret siden opdateret i forhold til wirefreames

--- a/Aktiviteter.html
+++ b/Aktiviteter.html
@@ -46,23 +46,37 @@
         <button>læs mere her</button>
       </div>
     </section>
-
-    <section id="icons">
-      <div id="gridcon">
+    <section>
+      <div id="gridcon3">
         <div class="griditem">
-          <img src="icon.png" /> <button>læs mere her</button>
-        </div>
-        <div class="griditem">
-          <img src="icon.png" /><button>læs mere her</button>
-        </div>
-        <div class="griditem">
-          <img src="icon.png" /><button>læs mere her</button>
-        </div>
-        <div class="griditem">
-          <img src="icon.png" /><button>læs mere her</button>
+          <img src="icon.png" />
         </div>
       </div>
+      <div class="griditem">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
+          pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
+          provident quia aperiam eligendi totam saepe sequi quas fugit rerum at.
+        </p>
+        <button>læs mere her</button>
+      </div>
     </section>
+    <section>
+      <div id="gridcon3">
+        <div class="griditem">
+          <img src="icon.png" />
+        </div>
+      </div>
+      <div class="griditem">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
+          pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
+          provident quia aperiam eligendi totam saepe sequi quas fugit rerum at.
+        </p>
+        <button>læs mere her</button>
+      </div>
+    </section>
+
     <footer></footer>
   </body>
   <script src="main.js"></script>
