--- a/kontakt.html
+++ b/kontakt.html
@@ -14,6 +14,84 @@
       <img src="serveimage.png" />
     </section>
 
+    <section>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex facilis
+        iusto minus possimus, omnis labore sint perspiciatis fugiat. Doloremque
+        nemo nostrum nisi, distinctio porro dolore modi laudantium vitae quidem
+        deserunt!
+      </p>
+    </section>
+
+    <section id="icons">
+      <div id="gridcon">
+        <div class="griditem">
+          <img src="icon.png" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+            exercitationem soluta doloribus eum ex vero eos officiis illo dolore
+            sed deleniti voluptate maiores, ratione facilis voluptatem quos.
+            Omnis, sed sit?
+          </p>
+        </div>
+        <div class="griditem">
+          <img src="icon.png" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+            exercitationem soluta doloribus eum ex vero eos officiis illo dolore
+            sed deleniti voluptate maiores, ratione facilis voluptatem quos.
+            Omnis, sed sit?
+          </p>
+        </div>
+        <div class="griditem">
+          <img src="icon.png" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+            exercitationem soluta doloribus eum ex vero eos officiis illo dolore
+            sed deleniti voluptate maiores, ratione facilis voluptatem quos.
+            Omnis, sed sit?
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section id="form">
+      <form>
+        <label for="fname">First Name</label>
+        <input
+          type="text"
+          id="fname"
+          name="firstname"
+          placeholder="Your name.."
+        />
+
+        <label for="lname">Last Name</label>
+        <input
+          type="text"
+          id="lname"
+          name="lastname"
+          placeholder="Your last name.."
+        />
+
+        <label for="country">Country</label>
+        <select id="country" name="country">
+          <option value="australia">Australia</option>
+          <option value="canada">Canada</option>
+          <option value="usa">USA</option>
+        </select>
+
+        <label for="subject">Subject</label>
+        <textarea
+          id="subject"
+          name="subject"
+          placeholder="Write something.."
+          style="height:200px"
+        ></textarea>
+
+        <input type="submit" value="Submit" />
+      </form>
+    </section>
+
     <footer></footer>
   </body>
   <script src="main.js"></script>
