--- a/header.html
+++ b/header.html
@@ -1,4 +1,4 @@
-<a href="index.html">Forside</a>
+<a href="index.html"><img src="img/6.png"/></a>
 <div class="dropd">
   <a class="dropbtn" href="Aktiviteter.html">Aktiviteter</a>
 
