--- a/header.html
+++ b/header.html
@@ -1,13 +1,15 @@
 <a href="index.html"><img src="img/6.png"/></a>
+<a href="index.html" class="link">Forside</a>
+<a class="link" href="om.html">Om os</a>
 <div class="dropd">
-  <a class="dropbtn" href="Aktiviteter.html">Aktiviteter</a>
+  <a class="dropbtn link" href="Aktiviteter.html">Aktiviteter</a>
 
   <div class="dropdownc">
-    <a href="camp.html">camps</a>
+    <a href="camp.html">Camps</a>
     <a href="fritidsklub.html">Fritidsklub</a>
-    <a href="uddannelse.html">uddannelse af lærer</a>
-    <a href="internationalt.html">internationalt arbejde</a>
+    <a href="uddannelse.html">Uddannelse af lærer</a>
+    <a href="internationalt.html">Internationalt arbejde</a>
   </div>
 </div>
-<a href="om.html">Om os</a>
-<a href="kontakt.html">Kontakt</a>
+
+<a class="link" href="kontakt.html">Kontakt</a>
