--- a/index.html
+++ b/index.html
@@ -11,34 +11,57 @@
   <body>
     <div class="hovedmenu"></div>
     <section class="splash">
-      <img src="serveimage.png" />
-    </section>
-
-    <section id="1">
+      <img src="img/splash forside.png" />
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
-        pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
-        provident quia aperiam eligendi totam saepe sequi quas fugit rerum at.
+        HER SKAL TEXT TIL PLASH BILLEDET STÅ!!
       </p>
     </section>
 
     <section id="icons">
       <div id="gridcon">
         <div class="griditem">
-          <img src="icon.png" /> <button>læs mere her</button>
+          <img src="icon.png" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
+            pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
+            provident quia aperiam eligendi totam saepe sequi quas fugit rerum
+            at.
+          </p>
+          <button>læs mere her</button>
         </div>
         <div class="griditem">
-          <img src="icon.png" /><button>læs mere her</button>
+          <img src="icon.png" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
+            pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
+            provident quia aperiam eligendi totam saepe sequi quas fugit rerum
+            at.
+          </p>
+          <button>læs mere her</button>
         </div>
         <div class="griditem">
-          <img src="icon.png" /><button>læs mere her</button>
+          <img src="icon.png" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
+            pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
+            provident quia aperiam eligendi totam saepe sequi quas fugit rerum
+            at.
+          </p>
+          <button>læs mere her</button>
         </div>
         <div class="griditem">
-          <img src="icon.png" /><button>læs mere her</button>
+          <img src="icon.png" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
+            pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
+            provident quia aperiam eligendi totam saepe sequi quas fugit rerum
+            at.
+          </p>
+          <button>læs mere her</button>
         </div>
       </div>
     </section>
-    <section id="2">
+    <section id="one">
       <div id="gridcon2">
         <div class="griditem">
           <p>
