ikonere sat ind med styleling

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section id="icons">
       <div id="gridcon">
         <div class="griditem">
-          <img src="icon.png" />
+          <img src="icons/plant.png" />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
             pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
@@ -30,7 +30,7 @@
           <button>læs mere her</button>
         </div>
         <div class="griditem">
-          <img src="icon.png" />
+          <img src="icons/tent.png" />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
             pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
@@ -40,7 +40,7 @@
           <button>læs mere her</button>
         </div>
         <div class="griditem">
-          <img src="icon.png" />
+          <img src="icons/books.png" />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
             pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
@@ -50,7 +50,7 @@
           <button>læs mere her</button>
         </div>
         <div class="griditem">
-          <img src="icon.png" />
+          <img src="icons/earth.png" />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
             pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
