--- a/om.html
+++ b/om.html
@@ -27,16 +27,23 @@
         provident quia aperiam eligendi totam saepe sequi quas fugit rerum at.
       </p>
     </section>
+    <section>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
+        pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
+        provident quia aperiam eligendi totam saepe sequi quas fugit rerum at.
+      </p>
+    </section>
     <section id="icons">
       <div id="gridcon">
         <div class="griditem">
-          <img src="icon.png" /> <button>læs mere her</button>
+          <img src="icons/art.png" /> <button>læs mere her</button>
         </div>
         <div class="griditem">
-          <img src="icon.png" /><button>læs mere her</button>
+          <img src="icons/dna.png" /><button>læs mere her</button>
         </div>
         <div class="griditem">
-          <img src="icon.png" /><button>læs mere her</button>
+          <img src="icons/wrench.png" /><button>læs mere her</button>
         </div>
      
     </section>
