billedere tilføjet, styling af forside med billeder, billeder insat på forsiden

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html id="forside" lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -68,11 +68,12 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
             pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
             provident quia aperiam eligendi totam saepe sequi quas fugit rerum
-            at.
+            at. <br />
+            <button>læs mere her</button>
           </p>
         </div>
         <div class="griditem">
-          <img src="icon.png" /> <button>læs mere her</button>
+          <img src="img/forside.jpg" />
         </div>
       </div>
     </section>
