--- a/Aktiviteter.html
+++ b/Aktiviteter.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html id="aktiv" lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,11 +11,12 @@
   <body>
     <div class="hovedmenu"></div>
     <section class="splash">
-      <img src="serveimage.png" />
+      <img src="img/splash_2.png" />
+      <p>DETTE ER TEXT DER SKAL STÅ PÅ SPLASH BILLEDE</p>
     </section>
 
-    <section id="5">
-      <div id="gridcon2">
+    <section>
+      <div id="gridcon">
         <div class="griditem">
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
@@ -31,19 +32,38 @@
       </div>
     </section>
 
-    <section id="6">
-      <div id="gridcon3">
+    <section>
+      <div id="gridcon1">
         <div class="griditem">
           <img src="icon.png" />
         </div>
+
+        <div class="griditem">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
+            pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
+            provident quia aperiam eligendi totam saepe sequi quas fugit rerum
+            at.
+          </p>
+          <button>læs mere her</button>
+        </div>
       </div>
-      <div class="griditem">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
-          pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
-          provident quia aperiam eligendi totam saepe sequi quas fugit rerum at.
-        </p>
-        <button>læs mere her</button>
+    </section>
+    <section>
+      <div id="gridcon2">
+        <div class="griditem">
+          <img src="icon.png" />
+        </div>
+
+        <div class="griditem">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
+            pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
+            provident quia aperiam eligendi totam saepe sequi quas fugit rerum
+            at.
+          </p>
+          <button>læs mere her</button>
+        </div>
       </div>
     </section>
     <section>
@@ -51,29 +71,16 @@
         <div class="griditem">
           <img src="icon.png" />
         </div>
-      </div>
-      <div class="griditem">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
-          pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
-          provident quia aperiam eligendi totam saepe sequi quas fugit rerum at.
-        </p>
-        <button>læs mere her</button>
-      </div>
-    </section>
-    <section>
-      <div id="gridcon3">
+
         <div class="griditem">
-          <img src="icon.png" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
+            pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
+            provident quia aperiam eligendi totam saepe sequi quas fugit rerum
+            at.
+          </p>
+          <button>læs mere her</button>
         </div>
-      </div>
-      <div class="griditem">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
-          pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
-          provident quia aperiam eligendi totam saepe sequi quas fugit rerum at.
-        </p>
-        <button>læs mere her</button>
       </div>
     </section>
 
