--- a/Aktiviteter.html
+++ b/Aktiviteter.html
@@ -14,75 +14,75 @@
       <img src="img/splash_2.png" />
       <p>DETTE ER TEXT DER SKAL STÅ PÅ SPLASH BILLEDE</p>
     </section>
+    <section id="baggrund">
+      <section>
+        <div id="gridcon">
+          <div class="griditem">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
+              pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
+              provident quia aperiam eligendi totam saepe sequi quas fugit rerum
+              at.
+            </p>
+            <button>læs mere her</button>
+          </div>
+          <div class="griditem">
+            <img src="img/aktiv1.jpg" />
+          </div>
+        </div>
+      </section>
 
-    <section>
-      <div id="gridcon">
-        <div class="griditem">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
-            pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
-            provident quia aperiam eligendi totam saepe sequi quas fugit rerum
-            at.
-          </p>
-          <button>læs mere her</button>
+      <section>
+        <div id="gridcon1">
+          <div class="griditem">
+            <img src="img/aktiv2.jpg" />
+          </div>
+
+          <div class="griditem">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
+              pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
+              provident quia aperiam eligendi totam saepe sequi quas fugit rerum
+              at.
+            </p>
+            <button>læs mere her</button>
+          </div>
         </div>
-        <div class="griditem">
-          <img src="icon.png" />
+      </section>
+      <section>
+        <div id="gridcon2">
+          <div class="griditem">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
+              pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
+              provident quia aperiam eligendi totam saepe sequi quas fugit rerum
+              at.
+            </p>
+            <button>læs mere her</button>
+          </div>
+          <div class="griditem">
+            <img src="img/aktiv3.jpg" />
+          </div>
         </div>
-      </div>
+      </section>
+      <section>
+        <div id="gridcon3">
+          <div class="griditem">
+            <img src="img/aktiv4.jpg" />
+          </div>
+
+          <div class="griditem">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
+              pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
+              provident quia aperiam eligendi totam saepe sequi quas fugit rerum
+              at.
+            </p>
+            <button>læs mere her</button>
+          </div>
+        </div>
+      </section>
     </section>
-
-    <section>
-      <div id="gridcon1">
-        <div class="griditem">
-          <img src="icon.png" />
-        </div>
-
-        <div class="griditem">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
-            pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
-            provident quia aperiam eligendi totam saepe sequi quas fugit rerum
-            at.
-          </p>
-          <button>læs mere her</button>
-        </div>
-      </div>
-    </section>
-    <section>
-      <div id="gridcon2">
-        <div class="griditem">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
-            pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
-            provident quia aperiam eligendi totam saepe sequi quas fugit rerum
-            at.
-          </p>
-          <button>læs mere her</button>
-        </div>
-        <div class="griditem">
-          <img src="icon.png" />
-        </div>
-      </div>
-    </section>
-    <section>
-      <div id="gridcon3">
-        <div class="griditem">
-          <img src="icon.png" />
-        </div>
-
-        <div class="griditem">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
-            pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
-            provident quia aperiam eligendi totam saepe sequi quas fugit rerum
-            at.
-          </p>
-          <button>læs mere her</button>
-        </div>
-      </div>
-    </section>
-
     <footer></footer>
   </body>
   <script src="main.js"></script>
