--- a/om.html
+++ b/om.html
@@ -11,7 +11,7 @@
   <body>
     <div class="hovedmenu"></div>
     <section class="splash">
-      <img src="serveimage.png" />
+      <img src="img/splash_om.jpg" />
     </section>
     <section>
       <p>
