--- a/kontakt.html
+++ b/kontakt.html
@@ -26,7 +26,7 @@
     <section id="icons">
       <div id="gridcon">
         <div class="griditem">
-          <img src="icon.png" />
+          <img src="" />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
             exercitationem soluta doloribus eum ex vero eos officiis illo dolore
