stylinger  og billeder

--- a/camp.html
+++ b/camp.html
@@ -11,7 +11,8 @@
   <body>
     <div class="hovedmenu"></div>
     <section class="splash">
-      <img src="serveimage.png" />
+      <img src="img/splash camps.jpg" />
+      <p>splash billede text HERE!!!!</p>
     </section>
     <section>
       <div id="gridcon2">
