--- a/kontakt.html
+++ b/kontakt.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="kontakt">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,22 +11,16 @@
   <body>
     <div class="hovedmenu"></div>
     <section class="splash">
-      <img src="serveimage.png" />
-    </section>
-
-    <section>
+      <img src="img/splash kontarkt.jpg" />
       <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex facilis
-        iusto minus possimus, omnis labore sint perspiciatis fugiat. Doloremque
-        nemo nostrum nisi, distinctio porro dolore modi laudantium vitae quidem
-        deserunt!
+        text til splash goes HERE!!!!
       </p>
     </section>
 
     <section id="icons">
-      <div id="gridcon">
+      <div class="gridcon">
         <div class="griditem">
-          <img src="" />
+          <img src="img/JuliePi.png" />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
             exercitationem soluta doloribus eum ex vero eos officiis illo dolore
@@ -35,7 +29,7 @@
           </p>
         </div>
         <div class="griditem">
-          <img src="icon.png" />
+          <img src="img/KarinaRothhoffBrix.png" />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
             exercitationem soluta doloribus eum ex vero eos officiis illo dolore
@@ -44,7 +38,7 @@
           </p>
         </div>
         <div class="griditem">
-          <img src="icon.png" />
+          <img src="img/Soren.png" />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
             exercitationem soluta doloribus eum ex vero eos officiis illo dolore
