--- a/om.html
+++ b/om.html
@@ -12,38 +12,35 @@
     <div class="hovedmenu"></div>
     <section class="splash">
       <img src="img/splash_om.jpg" />
-    </section>
-    <section>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
-        pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
-        provident quia aperiam eligendi totam saepe sequi quas fugit rerum at.
+       text til plash goes HERE!!!
       </p>
     </section>
-    <section>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
-        pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
-        provident quia aperiam eligendi totam saepe sequi quas fugit rerum at.
-      </p>
-    </section>
-    <section>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
-        pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
-        provident quia aperiam eligendi totam saepe sequi quas fugit rerum at.
-      </p>
-    </section>
+  
+  
+    
     <section id="icons">
       <div id="gridcon">
         <div class="griditem">
-          <img src="icons/art.png" /> <button>læs mere her</button>
+          <img src="icons/art.png" />       <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
+            pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
+            provident quia aperiam eligendi totam saepe sequi quas fugit rerum at.
+          </p><button>læs mere her</button>
         </div>
         <div class="griditem">
-          <img src="icons/dna.png" /><button>læs mere her</button>
+          <img src="icons/dna.png" />      <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
+            pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
+            provident quia aperiam eligendi totam saepe sequi quas fugit rerum at.
+          </p><button>læs mere her</button>
         </div>
         <div class="griditem">
-          <img src="icons/wrench.png" /><button>læs mere her</button>
+          <img src="icons/wrench.png" />      <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
+            pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
+            provident quia aperiam eligendi totam saepe sequi quas fugit rerum at.
+          </p><button>læs mere her</button>
         </div>
      
     </section>
