footer is still missning otherwise it is done

--- a/internationalt.html
+++ b/internationalt.html
@@ -11,7 +11,7 @@
   <body>
     <div class="hovedmenu"></div>
     <section class="splash">
-      <img src="serveimage.png" />
+      <img src="img/splash_inter.jpg" />
       <p>splash billede text goes HERE!!!!!!</p>
     </section>
     <section>
