footer, brugermenu work in progress

--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,8 @@
 <section class="gridcon">
   <div>
-
+    <p>
+    Adolphsvej 59, 1. sal  2820 Gentofte <br>
+    71 99 52 05</p>
   </div>
   <div>
       <div class="gridcon_icons"></div>
